# Notepad

./: Back.cpp  Back.h  CMakeLists.txt  Front.cpp  Front.h  README.md  header.h  main.cpp  text.txt
